<resources>
    <string name="app_name">Sudoku Language Practice App</string>
    <string name="welcome_text"><b>Welcome TO \n Sudoku Vocabulary \nPractice App</b></string>
    <string name="lang_level"><b>My level of \n (*** input language***) is </b></string>
    <string name="sudoku_level"><b>My level of \n Sudoku is </b></string>
    <string name="submit">Submit</string>
    <string name="GridSize"><b>Choose Grid Size</b></string>

    <string name="I_want_to_learn"><b>I want to learn</b></string>
    <string name="I_already_know"><b>I already know</b></string>

    <string-array name="array_indian_states">
        <item><i>Select Learning Language</i></item>
        <item>Danish</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

    <string-array name="array_indian_districts">
        <item><i>Select Native Language</i></item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

    <string-array name="array_grid_size">
        <item><i>Select Grid Size</i></item>
        <item>4 x 4</item>
        <item>6 x 6</item>
        <item>9 x 9 </item>
        <item>12 x 12</item>
    </string-array>

    <string-array name="array_lang_level">
        <item><i>Select Difficulty Level</i></item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Hard</item>
    </string-array>

    <string-array name="array_sudoku_level">
        <item><i>Select Difficulty Level</i></item>
        <item>Novice</item>
        <item>Expert</item>

    </string-array>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home">Home</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="help">Help</string>
    <string name="pause">Pause</string>
    <string name="settings">Settings</string>

    <string name="title_activity_game">Game</string>
    <string name="title_home">Home</string>
    <string name="title_help">Help</string>
    <string name="title_translation">Translation</string>

    <string name="placeholder">Placeholder</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
    </string>
</resources>