<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="5dp"
    tools:context="ca.sfu.cmpt276.sudokulang.MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="2dp"
        android:padding="6dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="18sp"
        tools:text="@string/welcome_text" />

    <TextView
        android:id="@+id/textView_Learning_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="55dp"
        android:padding="6dp"
        android:text="@string/I_want_to_learn"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_learning_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Learning_lang"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textView_Native_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_learning_lang"
        android:layout_marginTop="40dp"
        android:padding="6dp"
        android:text="@string/I_already_know"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_native_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Native_lang"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textView_Grid_Sizes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_native_lang"
        android:layout_marginTop="40dp"
        android:padding="6dp"
        android:text="@string/GridSize"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_grid_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Grid_Sizes"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:id="@+id/image_button_next"
        android:layout_width="67dp"
        android:layout_height="73dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-1dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_arrow_circle_right_outline_24dp" />

    <ImageButton
        android:id="@+id/image_button_favourites"
        android:layout_width="84dp"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="-8dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_star_outline_24dp" />

    <ImageButton
        android:id="@+id/image_button_settings"
        android:layout_width="79dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_settings_outline_24dp" />

    <ImageButton
        android:id="@+id/image_button_history"
        android:layout_width="72dp"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_history_24dp" />

    <ImageButton
        android:id="@+id/image_button_help"
        android:layout_width="68dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_help_outline_24dp" />

    <ImageButton
        android:id="@+id/image_button_tutorial"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/blue"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_play_circle_outline_24dp" />

</RelativeLayout>